# infinite-package-manager

./: Cargo.toml  GEMINI.md
memory/: constitution.md  constitution_update_checklist.md
scripts/: common.sh  create-new-feature.sh  update-agent-context.sh
specs/000-plan-feature-implementation/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/000-plan-feature-implementation/contracts/: example-contract.md
specs/001-/: spec.md
specs/001-infinite-package-manager/: plan.md
specs/001-rust-linux-dpkg/: spec-ja.md  spec.md
src/: lib.rs  main.rs  modules.rs
src/modules/: command.rs  compats.rs
src/modules/command/: license.rs  manual.rs  package.rs  repo.rs
src/modules/compats/: pkg.rs  repo.rs
src/modules/compats/pkg/: ipak.rs
src/modules/compats/repo/: apt.rs
src/modules/compats/repo/tests/: ubuntu.sources
src/utils/: args.rs  error.rs
templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
